<resources>
    <string name="app_name">Eton</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="bin">Bin</string>
    <string name="export">Export</string>
    <string name="star">Star</string>
    <string name="sort">Sort</string>
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="sort_ascending">Oldest Note First</string>
    <string name="sort_descending">Newest Note First</string>
    <string name="application">Application</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="empty_list_image">Empty List Image</string>
    <string name="empty_list">Uh-oh. It\'s empty here! Add some notes.</string>
    <string name="select">Select an option</string>
    <string name="contact">Contact</string>
    <string name="search_hint">Search notes</string>
    <string name="already_here">You are already here!</string>
    <string name="coming_soon">Export functionality coming soon!</string>
    <string name="bin_empty">There\'s nothing in the Bin.</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Enter your note here</string>
    <string name="add_note">Add Note</string>
    <string name="star_content_description">Star Icon</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="copy_title">Copy Title</string>
    <string name="copy_description">Copy Description</string>
    <string name="copy_whole">Copy Entire Note</string>
    <string name="share">Share</string>
    <string name="edit_note">Edit Note</string>
    <string name="view_note">Note</string>
    <string name="share_using">Share Using&#8230;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure you want to delete this note?</string>
    <string name="delete_note">Delete Note</string>
    <string name="starred_note">Starred Note Icon</string>
    <string name="del_res">Restore or Delete Note</string>
    <string name="delete_forever">Delete Forever</string>
    <string name="restore">Restore</string>
    <string name="delete_or_restore">Would you like to Restore the Note or Delete it?</string>
    <string name="delete_all_notes">Empty Bin</string>
    <string name="delete_all_sure">Are you sure you want to empty the Bin?</string>
    <string name="edit_description">Description</string>
    <string name="search_results">Search Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="developed_by">Developed By Pushkar Kurhekar</string>
    <string name="connect_with_me">Connect With Me</string>
    <string name="github_link">https://github.com/pshkrh</string>
    <string name="linkedin_link">https://www.linkedin.com/in/pshkrh/</string>
    <string name="lib">Libraries Used</string>
    <string name="source_code">Source Code &amp; License</string>
    <string name="code">Source Code</string>
    <string name="source_code_info">This app is open source! You can contribute to the app here: https://github.com/pshkrh/eton/</string>
    <string name="license">License</string>
    <string name="export_notes">Export Notes</string>
    <string name="export_info">This will export all your notes to a text file in your phone\'s internal memory.\n\nFor this, the app requires you to provide Storage permissions.</string>
    <string name="export_info_no_perm">This will export all your notes to a text file in your phone\'s internal memory.</string>
    <string name="cancel">Cancel</string>
    <string name="github_content_desc">Github Logo</string>
    <string name="linkedin_content_desc">Linkedin Logo</string>
    <string name="logo_content_desc">Eton App Logo</string>
    <string name="empty_search">No Search Results Found!</string>
    <string name="untitled">Untitled Note</string>

    <string-array name="about_array">
        <item>Source Code &amp; License</item>
        <item>Libraries Used</item>
        <item>Rate this App</item>
        <item>Visit my Website</item>
        <item>Check out my other Apps</item>
        <item>Credits</item>
    </string-array>

    <string-array name="lib_array">
        <item>Android Design Support Library</item>
        <item>Calligraphy</item>
        <item>Material Dialogs</item>
        <item>Material Edit Text</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="sort_details">Select how you would like to see your notes here</string>
    <string name="pref_title_default_sort_order">Default Sorting Order</string>
    <string name="key_sort_order">key_sort_order</string>
    <string-array name="pref_list_titles">
        <item>Alphabetical</item>
        <item>Oldest Note First</item>
        <item>Newest Note First</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
