<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/select">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notes"
                    android:icon="@drawable/note_multiple"
                    android:title="@string/notes" />
                <item
                    android:id="@+id/nav_bin"
                    android:icon="@drawable/delete"
                    android:title="@string/bin" />
                <item
                    android:id="@+id/nav_export"
                    android:icon="@drawable/file_export"
                    android:title="@string/export" />
            </group>

        </menu>

    </item>

    <item android:title="@string/application">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/information"
                    android:title="@string/about" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/email"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

</menu>
