<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="0"
        android:title="@string/search"
        android:icon="@drawable/ic_magnify_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="1"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_variant_white_24dp"
        app:showAsAction="ifRoom|withText">

        <menu>

            <item
                android:id="@+id/action_sort_alphabetical"
                android:orderInCategory="0"
                android:title="@string/sort_alphabetical"
                android:icon="@drawable/ic_sort_alphabetical_black_24dp"
                app:showAsAction="withText"/>

            <item
                android:id="@+id/action_sort_ascending"
                android:orderInCategory="0"
                android:title="@string/sort_ascending"
                android:icon="@drawable/ic_sort_ascending_black_24dp"
                app:showAsAction="withText"/>

            <item
                android:id="@+id/action_sort_descending"
                android:orderInCategory="0"
                android:title="@string/sort_descending"
                android:icon="@drawable/ic_sort_descending_black_24dp"
                app:showAsAction="withText"/>
        </menu>

    </item>
    <item
        android:id="@+id/action_star"
        android:orderInCategory="2"
        android:title="@string/star"
        android:icon="@drawable/ic_star_white_24dp"
        app:showAsAction="ifRoom|withText"/>
</menu>
