<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeLicenseActivity"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"
        fontPath="fonts/Raleway-Bold.ttf"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:autoLink="web"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/source_code_info"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license"
        fontPath="fonts/Raleway-Bold.ttf"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/license_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>

    </ScrollView>


</LinearLayout>