<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            android:elevation="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/notes_pic_white"
                    android:contentDescription="@string/logo_content_desc"/>

                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:padding="5dp"/>

            </LinearLayout>



        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/developed_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/developed_by"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/connect_with_me"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:gravity="center">


            <ImageView
                android:id="@+id/github_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/github_circle"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/github_content_desc"/>

            <ImageView
                android:id="@+id/linkedin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/linkedin_box"
                android:contentDescription="@string/linkedin_content_desc"/>

        </LinearLayout>

            <ListView
                android:id="@+id/about_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stackFromBottom="true" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
